Creado mediante Colaboratory

--- a/Producto_Medio.ipynb
+++ b/Producto_Medio.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPTf6X39CKKnHy40S9TjqFU",
+      "authorship_tag": "ABX9TyPhE2tNWgPVkxMh5XTtEbga",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,30 +27,32 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "aHAcbRGkCp_6",
-        "outputId": "0da1af29-e917-4d90-c42a-74db9a28095d"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "608\n",
-            "772\n",
-            "520\n",
-            "371\n"
-          ]
-        }
+      "cell_type": "markdown",
+      "source": [
+        "# Cuadrado Medio\n",
+        "\n",
+        "Es un algoritmo no congruencial que fue propuesto en los años cuarenta. Este algoritmo necesita un número entero detonador también llamado “Semilla” con D dígitos, el cual es elevado al cuadrado para seleccionar del resultado los D dígitos del centro; el primer número ri, es determinado anteponiendo el “0” a estos dígitos. El segundo ri se obtiene con el mismo procedimiento, solo que en este se elevan al cuadrado los D dígitos del centro que se seleccionaron para obtener el primer ri. Este método se repite hasta obtener n número ri.\n",
+        "\n",
+        "Algoritmo:\n",
+        "\n",
+        "\n",
+        "1.   Tomamos un número de 4 digitos X0=2024\n",
+        "2.   Elevamos al cuadrado = 4096576\n",
+        "3.   Tomamos 4*m digitos (cuando son 7 digitos agregamos un 0)\n",
+        "4.   Tomamos el cuadrado medio x1= 0965\n",
+        "5.   Elevemos al cuadrado y sigue ...\n",
+        "\n"
       ],
+      "metadata": {
+        "id": "bOINJva91Y3W"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [
         "#Valdez Garcia Karla Anali\n",
         "#Simulación I 21/02/24\n",
+        "\n",
         "#Números aleatorios multiplicación\n",
         "#2 Numeros de 3 digitos\n",
         "#Elevar al cuadrado\n",
@@ -82,6 +84,26 @@
         "for _ in range(4): #hacemos ciclico\n",
         "  x0= num( x0, x1 )\n",
         "  print(x0)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "R8_2Xkc21aPf",
+        "outputId": "0c856065-bfb8-4710-cccc-9377b1df6b81"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "608\n",
+            "772\n",
+            "520\n",
+            "371\n"
+          ]
+        }
       ]
     }
   ]
