Creado mediante Colaboratory

--- a/Producto_Medio.ipynb
+++ b/Producto_Medio.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPCbHZqhs66vU3s9jzQrcsU",
+      "authorship_tag": "ABX9TyP6SJNyx3h7QlvYpbxWQ7br",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,16 +29,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Cuadrado Medio\n",
+        "# Producto Medio\n",
         "\n",
-        "Es un algoritmo no congruencial que fue propuesto en los años cuarenta por Von Neumann y Metrópolis . Este algoritmo necesita un número entero detonador también llamado “Semilla” con D dígitos, el cual es elevado al cuadrado para seleccionar del resultado los D dígitos del centro; el primer número ri, es determinado anteponiendo el “0” a estos dígitos. El segundo ri se obtiene con el mismo procedimiento, solo que en este se elevan al cuadrado los D dígitos del centro que se seleccionaron para obtener el primer ri. Este método se repite hasta obtener n número ri.\n",
+        "Este algoritmo requiere de dos semillas; ambas con D dígitos; además de elevarlas al cuadrado, las semillas se multiplican y del producto resultante se seleccionan los D dígitos del centro, los cuales formaran el primer número de D dígitos. Después se elimina una semilla y la otra se multiplica por el primer número de D dígitos, para luego seleccionar del producto los D dígitos que conformaran un segundo número ri. Entonces se elimina la segunda semilla, y se multiplica el primer número de los D dígitos por el segundo número de los D dígitos; del producto se obtiene el tercer número de ri. Siempre se ira eliminando el número más antiguo y el procedimiento se repetirá hasta generar los n números pseudo aleatorios.\n",
         "\n",
         "Algoritmo:\n",
         "\n",
         "\n",
-        "1.   Tomamos dos números de 3 digitos y multiplicamos\n",
+        "1.   Tomamos dos semillas de 3 digitos y multiplicamos\n",
         "2.   Elevamos al cuadrado\n",
-        "3.   Tomamos 4*m digitos (cuando son 7 digitos agregamos un 0)\n",
+        "3.   Tomamos 3*m digitos (cuando son 7 digitos agregamos un 0)\n",
         "4.   Tomamos el cuadrado medio x1\n",
         "5.   Elevemos al cuadrado y sigue ...\n",
         "\n"
@@ -52,63 +52,70 @@
       "source": [
         "#Valdez Garcia Karla Anali\n",
         "#Simulación I 21/02/24\n",
-        "\n",
         "#Números aleatorios multiplicación\n",
         "#2 Numeros de 3 digitos\n",
         "#Elevar al cuadrado\n",
         "#3 Tomar el cuadrado medio\n",
         "\n",
-        "#Definimos una función para realizar la operación de los 2 números de 3 digitos\n",
-        "def num( x0,x1 ):\n",
-        "  y=x0*x1\n",
-        "  b=str(y)\n",
-        "  n=len(str(y))\n",
-        "#Contamos los elementos y si el modulo de 5 es 0, no agrega 0's extras\n",
-        "  if n%5==0:\n",
-        "    l=list(b) #lista de los 3 elementos del cuadrado de numero\n",
-        "    a=l[1:4]\n",
-        "    cad=\"\".join(map(str, a))\n",
-        "    entero=int(cad)\n",
-        "#Agregamos 0's a la izquierda de nuestro número\n",
-        "  else:\n",
-        "    l=list(b)\n",
-        "    l.insert(0,0) #agregamos en la posición 0 un 0\n",
-        "    a=l[2:5]\n",
-        "    cad=\"\".join(map(str, a)) #hacemos una lista cadena\n",
-        "    entero=int(cad)\n",
+        "#Definimos una función para realizar la operación de las 2 semillas de 3 digitos\n",
+        "def num(x0, x1):\n",
+        "    generados = []\n",
         "\n",
-        "  return entero\n",
+        "    y = x0 * x1\n",
+        "    b = str(y)\n",
+        "    n = len(str(y))\n",
         "\n",
-        "x0=123\n",
-        "x1=456\n",
+        "    if n % 5 == 0:\n",
+        "        l = list(b)\n",
+        "        a = l[1:4]\n",
+        "        cad = \"\".join(map(str, a))\n",
+        "        entero = int(cad)\n",
+        "        generados.append(entero)\n",
+        "    else:\n",
+        "        l = list(b)\n",
+        "        l.insert(0, 0)\n",
+        "        a = l[2:5]\n",
+        "        cad = \"\".join(map(str, a))\n",
+        "        entero = int(cad)\n",
+        "        generados.append(entero)\n",
         "\n",
-        "for _ in range(10): #hacemos ciclico\n",
-        "  x0= num( x0, x1 )\n",
-        "  print(x0)"
+        "    return generados\n",
+        "\n",
+        "# Definimos semillas\n",
+        "x0 = 999\n",
+        "x1 = 124\n",
+        "\n",
+        "# Lista para almacenar todos los números generados\n",
+        "generados = []\n",
+        "\n",
+        "for _ in range(10):\n",
+        "    # Agregamos los números generados en esta iteración a la lista\n",
+        "    generados.extend(num(x0, x1)) #usamos extend ya que agrega todos los elementos\n",
+        "    #append solo agrega el último\n",
+        "\n",
+        "    # Actualizamos las semillas para la próxima iteración\n",
+        "    x0 = x1\n",
+        "    x1 = generados[-1]  # Tomamos el último número generado como la nueva semilla x1\n",
+        "\n",
+        "# Imprimimos todos los números generados\n",
+        "print(\"Números generados:\", generados)\n",
+        "\n",
+        ""
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "R8_2Xkc21aPf",
-        "outputId": "fac37c8c-8b26-4722-b531-2195775e4362"
+        "outputId": "5882a4e6-d93f-4c64-8d18-d213cae4d57c"
       },
-      "execution_count": 4,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "608\n",
-            "772\n",
-            "520\n",
-            "371\n",
-            "691\n",
-            "150\n",
-            "840\n",
-            "830\n",
-            "784\n",
-            "575\n"
+            "Números generados: [238, 951, 263, 501, 317, 588, 863, 74, 386, 856]\n"
           ]
         }
       ]
