Creado mediante Colaboratory

--- a/Metodo_de_Congruencia.ipynb
+++ b/Metodo_de_Congruencia.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNddfN0buXpbwPxGge4nQ56",
+      "authorship_tag": "ABX9TyOw+my/4zlO7VPhmywcQne4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,136 +27,93 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 100,
+      "cell_type": "markdown",
+      "source": [
+        "# Generador Congruencial\n",
+        "\n",
+        "Es un algoritmo que permite obtener una secuencia de números pseudoaleatorios calculados con una función lineal definida a trozos discontinua\n",
+        "La secuencia de números entero X1,X2,X3.. está definida por la relación de recurrencia:\n",
+        "\n",
+        "con 0<= Xi >= m-1, donde m(modulo), a(multiplicador),c(incremento) y X0 (semilla)\n",
+        "\n",
+        "Además m>0, 0<a<m , 0<=c<m y 0<=x0<m\n",
+        "Si  c=0 , el generador es llamado frecuentemente Generador Congruencial Lineal Multiplicativo o pseudoaleatorio de Lehmer.\n",
+        "\n",
+        "\n",
+        "El periodo máximo puede ser a lo más su módulo m y en tal caso diremos que el generador congruencial tiene un periodo completo."
+      ],
       "metadata": {
-        "id": "MHXRssVy474X"
-      },
-      "outputs": [],
+        "id": "Q4TPgfgHZWm0"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [
         "#Valdez Garcia Karla Anali\n",
         "#27/02/24\n",
         "#Método de Congruencia\n",
         "#sololearn\n",
-        "\n",
+        "from prettytable import PrettyTable\n",
         "def num(x0, m, a, c ,iteraciones ):\n",
         "  xn=x0\n",
+        "  tabla = PrettyTable()\n",
+        "  tabla.field_names = [\"Iteración\", \"Xn\",\"aXn + c\", \"Xn/m\"]\n",
+        "\n",
         "  for i in range(iteraciones):\n",
         "    x1= xn/m\n",
-        "    xn= (a*xn+c) % m #modulo\n",
-        "    #print(f'x{i+1} = {xn}')\n",
-        "    print(f'x{i+1} = {x1}')\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
-      ]
+        "    xa= (a*xn+c) #Calculamos  aXn + c\n",
+        "    xn= xa % m #modulo\n",
+        "    tabla.add_row([i + 1, xn, xa , x1])\n",
+        "  print(tabla)\n"
+      ],
+      "metadata": {
+        "id": "yTxcG2PixnEe"
+      },
+      "execution_count": 17,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "num(x0, 16, 5, 5 ,20 )"
+        "num(6 ,16, 5, 5 ,20 )"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "3xmJZHfWC8ZP",
-        "outputId": "765eb4b3-9f1f-4382-990d-16d8b20b5034"
+        "id": "aj63j5yvx_lb",
+        "outputId": "231bde95-7446-4ce0-c8a5-eb11dee8945c"
       },
-      "execution_count": 101,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "x1 = 0.375\n",
-            "x2 = 0.1875\n",
-            "x3 = 0.25\n",
-            "x4 = 0.5625\n",
-            "x5 = 0.125\n",
-            "x6 = 0.9375\n",
-            "x7 = 0.0\n",
-            "x8 = 0.3125\n",
-            "x9 = 0.875\n",
-            "x10 = 0.6875\n",
-            "x11 = 0.75\n",
-            "x12 = 0.0625\n",
-            "x13 = 0.625\n",
-            "x14 = 0.4375\n",
-            "x15 = 0.5\n",
-            "x16 = 0.8125\n",
-            "x17 = 0.375\n",
-            "x18 = 0.1875\n",
-            "x19 = 0.25\n",
-            "x20 = 0.5625\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from tabulate import tabulate\n",
-        "\n",
-        "def num(x0, iteraciones):\n",
-        "    xn = x0\n",
-        "    resultados = []\n",
-        "    for i in range(iteraciones):\n",
-        "        x1= xn/16\n",
-        "        xn = (5 * xn + 5) % 16  # módulo\n",
-        "        #resultados.append([i + 1, xn])\n",
-        "        resultados.append([i + 1, x1])\n",
-        "    return resultados\n",
-        "\n",
-        "# Parámetros\n",
-        "x0 = 6  # Semilla inicial\n",
-        "iteraciones = 20  # Número de iteraciones\n",
-        "\n",
-        "# Calcular secuencia\n",
-        "resultado_secuencia = num(x0, iteraciones)\n",
-        "\n",
-        "# Mostrar en tabla\n",
-        "print(tabulate(resultado_secuencia, headers=[\"Iteración\", \"Valor\"]))"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "OCcf_mgYHMZR",
-        "outputId": "c99f0489-f94f-4d9b-b62a-dff7ec5541d4"
-      },
-      "execution_count": 105,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "  Iteración    Valor\n",
-            "-----------  -------\n",
-            "          1   0.375\n",
-            "          2   0.1875\n",
-            "          3   0.25\n",
-            "          4   0.5625\n",
-            "          5   0.125\n",
-            "          6   0.9375\n",
-            "          7   0\n",
-            "          8   0.3125\n",
-            "          9   0.875\n",
-            "         10   0.6875\n",
-            "         11   0.75\n",
-            "         12   0.0625\n",
-            "         13   0.625\n",
-            "         14   0.4375\n",
-            "         15   0.5\n",
-            "         16   0.8125\n",
-            "         17   0.375\n",
-            "         18   0.1875\n",
-            "         19   0.25\n",
-            "         20   0.5625\n"
+            "+-----------+----+---------+--------+\n",
+            "| Iteración | Xn | aXn + c |  Xn/m  |\n",
+            "+-----------+----+---------+--------+\n",
+            "|     1     | 3  |    35   | 0.375  |\n",
+            "|     2     | 4  |    20   | 0.1875 |\n",
+            "|     3     | 9  |    25   |  0.25  |\n",
+            "|     4     | 2  |    50   | 0.5625 |\n",
+            "|     5     | 15 |    15   | 0.125  |\n",
+            "|     6     | 0  |    80   | 0.9375 |\n",
+            "|     7     | 5  |    5    |  0.0   |\n",
+            "|     8     | 14 |    30   | 0.3125 |\n",
+            "|     9     | 11 |    75   | 0.875  |\n",
+            "|     10    | 12 |    60   | 0.6875 |\n",
+            "|     11    | 1  |    65   |  0.75  |\n",
+            "|     12    | 10 |    10   | 0.0625 |\n",
+            "|     13    | 7  |    55   | 0.625  |\n",
+            "|     14    | 8  |    40   | 0.4375 |\n",
+            "|     15    | 13 |    45   |  0.5   |\n",
+            "|     16    | 6  |    70   | 0.8125 |\n",
+            "|     17    | 3  |    35   | 0.375  |\n",
+            "|     18    | 4  |    20   | 0.1875 |\n",
+            "|     19    | 9  |    25   |  0.25  |\n",
+            "|     20    | 2  |    50   | 0.5625 |\n",
+            "+-----------+----+---------+--------+\n"
           ]
         }
       ]
