--- a/Kolmogorv_SI.ipynb
+++ b/Kolmogorv_SI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPpSJ87wGIFF4WuknE+44FJ",
+      "authorship_tag": "ABX9TyPXMvok4ttmoTW13+3Byhvj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,12 +27,38 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 81,
+      "cell_type": "markdown",
+      "source": [
+        "## Kolmogorv SI\n",
+        "\n",
+        "La prueba de Kolmogorov-Smirnov se utiliza para probar la bondad del ajuste de una distribución de frecuencia teórica, es decir, si existe una diferencia significativa entre la distribución de la frecuencia observada y la distribución de frecuencia teórica (esperada).\n",
+        "\n",
+        "Algoritmo:\n",
+        "\n",
+        "\n",
+        "\n",
+        "1.   Ordenar de menor al mayor los numeros aleatorios Xi\n",
+        "2.   Calcule D+, D- y D, donde:\n",
+        "\n",
+        "D+ = max 1<i<n | i/n - Xi|\n",
+        "\n",
+        "D- = max 1<i<n |xi - (i-1)/n|\n",
+        "\n",
+        "D = max{ D+ , D-}\n",
+        "\n",
+        "3.  Comparamos con el valor crítico (en la tabla)\n",
+        "\n",
+        "4.  Se acepta si D < d alpha n\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "tLO9CasHANZj"
-      },
-      "outputs": [],
+        "id": "AVDhmUVtjmNX"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [
         "#Prueba Kolmogorv-Smirnov\n",
         "#Valdez Garcia Karla Anali\n",
@@ -46,6 +72,7 @@
         "  datos = [0.8797, 0.9848, 0.4557, 0.9170, 0.8376, 0.3884, 0.3469, 0.1592, 0.2204, 0.6235, 0.6289, 0.7977, 0.8536, 0.5991, 0.3681, 0.8750, 0.5844, 0.8846, 0.5461, 0.2088, 0.5999, 0.8147, 0.3410, 0.5739, 0.1525, 0.8589, 0.6431, 0.1492, 0.3254, 0.2006, 0.9996, 0.7387, 0.8681, 0.0856, 0.4720, 0.2415, 0.5613, 0.5291, 0.2258, 0.4272, 0.3808, 0.0318, 0.3188, 0.4603, 0.6360, 0.9606, 0.7401, 0.5992, 0.5027, 0.0954]\n",
         "  lista_ordenada = sorted(datos) #oredena los datos de menor a mayor\n",
         "\n",
+        "#Hacemos una tabla de los datos organizados\n",
         "\n",
         "  tabla = PrettyTable()\n",
         "  tabla.field_names = [\"i\", \"Xi\"]\n",
@@ -81,10 +108,13 @@
         "  if Dmedia(Dpositiva,Dnegativa) < vc:\n",
         "    print( \"Se acepeta la hipótesis\")\n",
         "  else:\n",
-        "    print( \"Se rechaza la hipótesis\")\n",
-        "\n",
-        "\n"
-      ]
+        "    print( \"Se rechaza la hipótesis\")\n"
+      ],
+      "metadata": {
+        "id": "TXZ4HR-XjnM4"
+      },
+      "execution_count": 68,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -96,9 +126,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yFsf38cGNy4K",
-        "outputId": "6f670717-4901-4fa2-f339-084239f25d1d"
+        "outputId": "f2ed45ac-3016-4f55-b3ad-503998a0080a"
       },
-      "execution_count": 82,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "stream",
@@ -172,9 +202,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wZYdtwc3Nz5b",
-        "outputId": "5ee76783-9840-48a7-e1b1-c61937ae3a77"
+        "outputId": "6990f1c7-9b72-422c-834f-5c9d6fafb0a8"
       },
-      "execution_count": 83,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -184,7 +214,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 83
+          "execution_count": 70
         }
       ]
     },
@@ -198,9 +228,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "566HA2JlN3Ag",
-        "outputId": "9512a9f4-af76-4c33-be11-7cac882d48c3"
+        "outputId": "9eb87dbf-7ae5-4223-b664-c5bab1739159"
       },
-      "execution_count": 84,
+      "execution_count": 71,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -210,7 +240,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 84
+          "execution_count": 71
         }
       ]
     },
@@ -224,9 +254,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oyD-jbVSN5_1",
-        "outputId": "85125002-6d57-4c25-bb63-bd4c0a06d21c"
+        "outputId": "32c8b2fe-e2dd-48c3-a1e4-a032d6634203"
       },
-      "execution_count": 85,
+      "execution_count": 72,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -236,7 +266,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 85
+          "execution_count": 72
         }
       ]
     },
@@ -250,9 +280,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "chwgw6SNEZ_n",
-        "outputId": "ebf59478-8d35-4306-d8c8-9ba2456278bd"
+        "outputId": "ac6cfcb7-7899-4e9c-adf3-07cc6b6a7f35"
       },
-      "execution_count": 86,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "stream",
