--- a/Prueba_Chi_cuadrada.ipynb
+++ b/Prueba_Chi_cuadrada.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNBS3z8EzbrOIvaeVzE2djK",
+      "authorship_tag": "ABX9TyOkRu/wnsIpgRk0tNu5e61X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -91,6 +91,7 @@
         "    datos4 = []\n",
         "    datos5 = []\n",
         "    indices = np.arange(50)\n",
+        "#Para el llenado hacemos los rangos que pertenecen a cada clase.\n",
         "    for i in indices:\n",
         "        if 0 <= datos[i] <= 0.2:\n",
         "            datos1.append(datos[i])\n",
@@ -108,7 +109,7 @@
       "metadata": {
         "id": "oUuru-sYoDDm"
       },
-      "execution_count": 4,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -116,7 +117,9 @@
       "source": [
         "#prueba chi cuadrada\n",
         "def prueba(N,n,clasesx):\n",
+        "#freeso =frecuencia esperada\n",
         "    freesp = N/n\n",
+        "#freobs =frecuencia observada\n",
         "    freobs = np.zeros(n)\n",
         "    indices1 = np.arange(5)\n",
         "    for i in indices1:\n",
@@ -130,7 +133,7 @@
       "metadata": {
         "id": "vRxtch_IoKhL"
       },
-      "execution_count": 5,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -156,9 +159,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DX1xd9mDoOZE",
-        "outputId": "52b11469-4914-414f-c5cd-64ee74deecbb"
+        "outputId": "2dd0c2e5-7bf4-4b9c-ca16-118fbf9650a5"
       },
-      "execution_count": 6,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
