--- a/PruebaCorridas_SI.ipynb
+++ b/PruebaCorridas_SI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN2cq0YuWvdfGh1uyjQUwG3",
+      "authorship_tag": "ABX9TyNVDTiLCNIIiiVzS5+D5PCu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -142,6 +142,7 @@
         "print(\"Varianza:\", varianza)\n",
         "print(\"Zo:\", Zo)\n",
         "Z = 1.96\n",
+        "print(\"Z:\", Z)\n",
         "#Hacemos la acomparación, para ver si se acepta la hipótesis\n",
         "if -1*Z <= Zo and Zo <= Z:\n",
         "  print(\"Por lo tanto, se acepta la hipotesis.\")\n",
@@ -153,9 +154,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GV3sP6oStoQr",
-        "outputId": "d617bd73-fb88-45fa-ff51-48c7f3f4cbb3"
+        "outputId": "e07ee0b4-73cd-4c85-c7a9-ef3bd72062aa"
       },
-      "execution_count": 11,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -195,6 +196,7 @@
             "Valor esperado: 16.333333333333332\n",
             "Varianza: 4.122222222222222\n",
             "Zo: -0.6567091033031179\n",
+            "Z: 1.96\n",
             "Por lo tanto, se acepta la hipotesis.\n"
           ]
         }
