Se creó con Colab

--- a/Exponencial_SI.ipynb
+++ b/Exponencial_SI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPhzcIpMM8CI3pkPu7KyvIP",
+      "authorship_tag": "ABX9TyMuRxxiZyZZ1lRAWJmYQFVx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,26 +27,28 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "Función exponencial:\n",
+        "\n",
+        "En Teoría de Probabilidad y Estadística, la distribución exponencial es una distribución continua que se utiliza para modelar tiempos de espera para la ocurrencia de un cierto evento. Esta distribución al igual que la distribución geométrica tiene la propiedad de pérdida de memoria. La distribución exponencial es un caso particular de la distribución gamma."
+      ],
       "metadata": {
-        "id": "CEJoKTWWctEw"
-      },
-      "outputs": [],
-      "source": []
+        "id": "XF3H8YV-EP96"
+      }
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "id": "GmUAzMvLm2fb"
-      },
-      "outputs": [],
       "source": [
         "import random as rnd\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt"
-      ]
+      ],
+      "metadata": {
+        "id": "g-X-M3cqEQXh"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -65,7 +67,7 @@
       "metadata": {
         "id": "GQcSTYU2m5mB"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -81,7 +83,7 @@
         "id": "5zzsq9hKnBIh",
         "outputId": "4b173e7c-689b-45f4-87ed-85093d70f96a"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -105,7 +107,7 @@
         "id": "DupPIlvinIJu",
         "outputId": "b76d9913-a846-4699-c734-f4a778754171"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -129,7 +131,7 @@
         "id": "gi9WNCTgnPjW",
         "outputId": "81a5c789-30ff-4d0d-8f3e-b22bb8410003"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -154,7 +156,7 @@
         "id": "VvKzzvM9nPkD",
         "outputId": "9bcfb930-9cd9-4a86-b203-d06c71a74fda"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -209,7 +211,7 @@
         "id": "bMoJ2ojlnV93",
         "outputId": "63424c53-54e1-42f2-a9ef-9a1b45119e63"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -234,6 +236,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Distribución Acumulativa:\n",
+        " F_{X}(x)=1-e^{-\\lambda x}}\n",
+        "para\n",
+        "𝑥≥0\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "UeUBbd-sHQ0Z"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#Distrubución Acumulativa\n",
@@ -246,7 +261,7 @@
       "metadata": {
         "id": "DrZEaFYSnYmP"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -257,7 +272,7 @@
       "metadata": {
         "id": "xui8koqyoSvl"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -278,7 +293,7 @@
         },
         "outputId": "a9bc9087-6be0-4b31-acf6-a9d8ab45e008"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
