--- a/Volados_SIipynb.ipynb
+++ b/Volados_SIipynb.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMisgcXGwWhHpbB3uZggbrO",
+      "authorship_tag": "ABX9TyN8umlSuk7akVBg6azLblYx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "eF5zoGCoIHcI"
       },
@@ -53,7 +53,7 @@
       "metadata": {
         "id": "2WFbPctrIIO1"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -69,7 +69,7 @@
         "id": "DXo83K9CIJgo",
         "outputId": "7038b25c-b82c-4626-a8eb-f32030d26660"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -110,7 +110,7 @@
       "metadata": {
         "id": "npy6b3tvIKyq"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -118,7 +118,7 @@
       "source": [
         "y=volados(100)\n",
         "np.mean(y) # media\n",
-        "#ley de los grandes numeros"
+        "#ley de los grandes numeros\n"
       ],
       "metadata": {
         "colab": {
@@ -128,7 +128,7 @@
         "id": "ODgg3QCYIMao",
         "outputId": "56c580ce-8713-4c64-a455-14c5ea89b99a"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -153,6 +153,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Tenemos dos zonas en esta gráfica:\n",
+        "\n",
+        "Estable :tenemos resultados más confiables para nuestra simulación (Necesitamos la regla de los números grandes)\n",
+        "\n",
+        "En la zona Transitoria, no tenemos resultados tan confiables"
+      ],
+      "metadata": {
+        "id": "g3SFuzQojYyE"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "volados(10000000)"
@@ -165,7 +178,7 @@
         "id": "UqsC1n20IPww",
         "outputId": "0a55d630-f7d4-4abe-f499-52b16cab8b2b"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
