--- a/Transporte_SI.ipynb
+++ b/Transporte_SI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOuLiLehpSXtiDSUmm+AjB2",
+      "authorship_tag": "ABX9TyPDHG3vBuYFMtz1wYcYKuDS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -234,7 +234,7 @@
       "source": [
         "Calculamos F(x) que corresponde a la Acumulada dada por:\n",
         "\n",
-        "$F(x) = $\\int_{-\\infty}^{x} f(s)ds\n",
+        "$F(x) = \\int_{-\\infty}^{x} f(s)ds$\n",
         "\n",
         "$F(x) = \\left\\{\n",
         "\\begin{matrix}\n",
@@ -249,13 +249,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Usaremos el Método de la Transformada Onversa ⁉\n",
+        "Usaremos el Método de la Transformada Inversa.\n",
         "Resolvemos F(x) = R y obtenemos:\n",
         "\n",
         "$ F^-1 = \\left\\{\n",
         "\\begin{matrix}\n",
-        "20 \\sqrt(2u)  +190, & 0 \\leq u < \\frac{1}{2} \\\\\n",
-        "-20 \\sqrt(2(1-u)) +230, & \\frac{1}{2} \\leq u \\leq 1\n",
+        "20 \\sqrt{2u}  +190, & 0 \\leq u < \\frac{1}{2} \\\\\n",
+        "-20 \\sqrt{(2(1-u)) }+230, & \\frac{1}{2} \\leq u \\leq 1\n",
         "\\end{matrix} \\right. $"
       ],
       "metadata": {
@@ -272,7 +272,7 @@
       "metadata": {
         "id": "SAUBJ5iglgli"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -300,7 +300,7 @@
         "id": "L-lqXVVh24Fn",
         "outputId": "c8b6e2de-898a-4b78-b980-f972ef987124"
       },
-      "execution_count": 124,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -373,7 +373,7 @@
         "id": "40pmPVYmlkH2",
         "outputId": "f643f97a-3c21-4ed3-fd78-01535b2e301a"
       },
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -512,7 +512,7 @@
         "id": "-mSWQGsHomNe",
         "outputId": "d2846921-f2ff-456c-c127-18eda3618f39"
       },
-      "execution_count": 123,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
